initial try at a pagination page

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -23,6 +23,8 @@ api_canvas_fhir:
    url: /api/customer-authentication/
  - title: "Conditional Requests"
    url: /api/conditional-requests/
+ - title: "Pagination"
+   url: /api/pagination
  - title: "Errors"
    url: /api/errors/
  - title: "Service Base URLs"
