Starts the chart-review page Also adds the assets needed for jekyll-glossary_tooltip

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,7 @@ minify_html: false
 plugins:
   - jekyll-algolia
   - jekyll-feed
+  - jekyll-glossary_tooltip
   - jekyll-menus
   - jekyll-seo-tag
   - jekyll-sitemap
