--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -181,6 +181,10 @@ api_careteam:
 api_claim:
  - title: "Claim Create"
    url: /api/claim/#create
+ - title: "Claim Read"
+   url: /api/claim/#read
+ - title: "Claim Search"
+   url: /api/claim/#search
 api_communication:
  - title: "Communication Create"
    url: /api/communication/#create
