--- a/_config_apikeys.yml
+++ b/_config_apikeys.yml
@@ -2,3 +2,5 @@ algolia:
   application_id: 'D4QF30HEJZ'
   index_name: 'docs_canvasmedical'
   max_record_size: 100000
+  files_to_exclude:
+    - 'release-notes/*/index.html'
