--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 theme_color: '#eee9d9'
 logo: assets/images/large-logo.png
+timezone: America/Los_Angeles
 
 ### Cookie consent
 #cookie_consent: true
