added note api beta to menu

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -512,4 +512,6 @@ releasenotes_product_updates:
 releasenotes_betas:
  - title: "Commands Module"
    url: /product-updates/commands-module 
+ - title: "Note API"
+   url: /product-updates/note-api 
 
