--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -321,6 +321,8 @@ api_patient:
    url: /api/patient/#update
  - title: "Patient Search"
    url: /api/patient/#search
+ - title: "Patient Files"
+   url: /api/patient/#files
 api_paymentnotice:
  - title: "PaymentNotice Create"
    url: /api/paymentnotice/#create
