--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -429,6 +429,12 @@ sdk:
 sdk_overview:
  - title: "Introduction"
    url: /sdk/
+ - title: "Command Line Interface"
+   url: /sdk/canvas_cli/
+ - title: "Modules"
+   identifier: sdk_modules
+
+sdk_modules:
  - title: "Commands"
    url: /sdk/commands/
  - title: "Data"
@@ -468,7 +474,7 @@ sdk_workflow_kit:
  - title: "Making FHIR Requests"
    url: /sdk/making-fhir-requests
  - title: "Canvas CLI Additional Commands"
-   url: /sdk/canvas-cli
+   url: /sdk/canvas-cli-additional-commands
  - title: "Protocol Logging Tool"
    url: /sdk/protocol-logging-tool
  - title: "Managing Protocols in Settings"
