--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -341,6 +341,8 @@ api_practitioner:
    url: /api/practitioner/#update
  - title: "Practitioner Search"
    url: /api/practitioner/#search
+ - title: "Send Reset Password Email"
+   url: /api/practitioner-password-reset-email
 api_procedure:
  - title: "Procedure Read"
    url: /api/procedure/#read
