--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -443,7 +443,7 @@ sdk_overview:
    url: /sdk/
  - title: "Command Line Interface"
    url: /sdk/canvas_cli/
- - title: "Modules"
+ - title: "SDK Modules"
    identifier: sdk_modules
 
 sdk_modules:
