--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -430,6 +430,8 @@ guides_list:
    url: /guides/team-based-care/
  - title: "Your First Plugin"
    url: /guides/your-first-plugin/
+ - title: "Creating Webhooks"
+   url: /guides/creating-webhooks-with-the-canvas-sdk/
 
 guides_templates:
  - title: "Behavioral Health"
