--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -485,6 +485,8 @@ data_module:
    url: /sdk/data-labs/
  - title: "Medication"
    url: /sdk/data-medication/
+ - title: "Questionnaire"
+   url: /sdk/data-questionnaire
  - title: "Task"
    url: /sdk/data-task/
  - title: "Value Sets"
