--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -483,6 +483,8 @@ data_module:
    url: /sdk/data-condition/
  - title: "Labs"
    url: /sdk/data-labs/
+ - title: "Medication"
+   url: /sdk/data-medication/
  - title: "Task"
    url: /sdk/data-task/
  - title: "Value Sets"
