--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -479,18 +479,25 @@ sdk_handlers:
 data_module:
  - title: "Allergy Intolerance"
    url: /sdk/data-allergy-intolerance/
+   description: Harmful or undesired physiological responses associated with exposure to a substance.
  - title: "Condition"
    url: /sdk/data-condition/
+   description: Condition, diagnosis, or reason for seeking medical attention.
  - title: "Labs"
    url: /sdk/data-labs/
+   description: Analysis of clinical specimens to obtain information about the health of a patient.
  - title: "Medication"
    url: /sdk/data-medication/
+   description: Pharmacologic agents used in the diagnosis, cure, mitigation, treatment, or prevention of disease.
  - title: "Patient"
    url: /sdk/data-patient/
+   description: Data used to categorize individuals for identification, records matching, and other purposes.
  - title: "Questionnaire"
    url: /sdk/data-questionnaire
+   description: Groups of coded questions and the coded patient responses.
  - title: "Value Sets"
    url: /sdk/data-value-sets/
+   description: Lists of codes and terms from various clinical coding systems grouped by a defining concept.
 
 sdk_workflow_kit:
  - title: "Quickstart"
